# actix-diesel-demo

./: .env  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: app.rs
src/controller/: author_controller.rs  book_controller.rs  mod.rs  post_controller.rs
src/model/: author.rs  book.rs  custom_errors.rs  dtos.rs  mod.rs  post.rs  traits.rs
src/service/: author_service.rs  book_service.rs  mod.rs  post_service.rs
