[package]
name = "actix-diesel-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"]}
diesel = { version = "2.1.0", features = ["postgres","r2d2", "chrono"] }
dotenvy = "0.15"
log = "0.4.19"